istio-grpc/k8s/greeter-k8s.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: greeter
  template:
    metadata:
      labels:
        app: greeter
    spec:
      containers:
      - args:
        - --address=:8080
        image: thiagocaiubi/grpc-greeter-go-server
        imagePullPolicy: Always
        name: greeter
        ports:
        - containerPort: 8080
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:8080
          initialDelaySeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: greeter
spec:
  ports:
  - name: grpc
    appProtocol: grpc
    port: 8080
    protocol: TCP
  selector:
    app: greeter
  type: ClusterIP
